Made all imports relative

--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Kniffel</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        overflow: hidden;
-      }
-    </style>
-    <script type="module" src="p5.min.js"></script>
-    <script type="module" src="p5setup.js"></script>
-    <script type="module" src="sketch.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body></body>
+
+<head>
+  <title>Kniffel</title>
+  <link rel="stylesheet" type="text/css" href="./style.css" />
+</head>
+
+<body>
+  <script type="module" src="./p5.min.js"></script>
+  <script type="module" src="./p5setup.js"></script>
+  <script type="module" src="./sketch.js"></script>
+</body>
+
 </html>
